# gh-agent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: commits.instructions.md
