[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "shacharCaduri",email = "73823590+shacharCaduri@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "github-copilot-sdk (>=0.1.25,<0.2.0)"
]

[tool.poetry]
packages = [{include = "agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
